# live-slide-center

./: .cursorignore  .cursorindexingignore  .env.example  .gitignore  .prettierignore  .prettierrc  .vercelignore  CLAUDE.md  Live SLIDE CENTER.code-workspace  clean-and-build.bat  package.json  pnpm-lock.yaml  release-licensed.bat  tsconfig.base.json  turbo.json  vercel.json
.cursor/rules/: 00-project-identity.mdc  01-data-isolation.mdc  02-quality-gate.mdc  03-i18n.mdc  04-git-workflow.mdc  agent-workflow.mdc  architecture-deep.mdc  code-quality-workflow.mdc  data-tenant-isolation.mdc  deploy-git-workflow.mdc  desktop-tauri.mdc  docs-maintenance.mdc  docs-roadmap.mdc  field-test-fase15.mdc  github-account-live-software11.mdc  guida-definitiva-doc-sync.mdc  i18n-slide-center.mdc  legacy-agents.mdc  mcp-supabase.mdc  mcp-vercel.mdc  project-architecture.mdc  react-components.mdc  security-roles.mdc  supabase-db.mdc  supabase-patterns.mdc  surgical-review-next-step.mdc  web-react.mdc  web-supabase-client.mdc
.github/workflows/: ci.yml  db-types-drift.yml  deploy-supabase.yml  desktop-release.yml  playwright.yml  rls-audit.yml  supabase-backup-verify.yml
apps/agent/: README.md  package.json
apps/agent/src-tauri/: Cargo.toml  installer-hooks.nsi  tauri.conf.json
apps/agent/src-tauri/src/: db.rs  discovery.rs  lib.rs  main.rs  routes.rs  server.rs  state.rs  sync.rs
apps/agent/src-tauri/src/license/: api.rs  commands.rs  crypto.rs  fingerprint.rs  manager.rs  mod.rs  types.rs
apps/agent/ui/: index.html
apps/desktop/: .gitignore  CODE_SIGNING.md  README.md  UPDATER_SETUP.md  package.json  smoke-report.json
apps/desktop/src-tauri/: Cargo.toml  EULA.txt  installer-hooks.nsi  tauri.conf.json  tauri.signing.example.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0001_init.sql  0002_paired_devices_lan_url.sql  0003_paired_devices_role.sql  0004_event_folders.sql  0005_validation_warnings.sql  0006_remote_control_pairings.sql  0007_room_provision_tokens.sql  0008_room_state_slide_index.sql  0009_extended_enums.sql  0010_device_metric_pings.sql
apps/desktop/src-tauri/src/: main.rs  role.rs  session_store.rs
apps/desktop/src-tauri/src/license/: client.rs  commands.rs  crypto.rs  fingerprint.rs  heartbeat.rs  manager.rs  mod.rs  storage.rs  types.rs
apps/desktop/src-tauri/src/server/: auth.rs  db.rs  device_persist.rs  error.rs  lan_events.rs  lan_push.rs  mdns.rs  mod.rs  pgrest.rs  state.rs  storage.rs
apps/desktop/src-tauri/src/server/routes/: folder_routes.rs  functions.rs  lan_events_routes.rs  mod.rs  rest.rs  rpc.rs  storage_routes.rs
apps/player/: README.md
apps/room-agent/: README.md  package.json
apps/room-agent/src-tauri/: Cargo.toml  installer-hooks.nsi  tauri.conf.json
apps/room-agent/src-tauri/src/: autostart.rs  discovery.rs  downloader.rs  lib.rs  main.rs  motw.rs  poller.rs  state.rs
apps/room-agent/src-tauri/src/license/: api.rs  commands.rs  crypto.rs  fingerprint.rs  manager.rs  mod.rs  types.rs
apps/web/: eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: ARCHITETTURA_LIVE_SLIDE_CENTER.md  AUDIT_FINALE_E_PIANO_TEST_v1.md  DISASTER_RECOVERY.md  EDGE_FUNCTIONS_WARM_KEEP.md  FIELD_TEST_CHECKLIST.md  FIELD_TEST_CREDENTIALS.md  GUIDA_DEFINITIVA_PROGETTO.md  GUIDA_OPERATIVA_v3_FIELD_TEST_E_OFFLINE.md  Istruzioni_Claude_Desktop.md  Istruzioni_Progetto_Claude_Live_Slide_Center.md  LIVE_SLIDE_CENTER_DEFINITIVO.md  PIANO_FINALE_SLIDE_CENTER_v2.md  PRE_CODE_PREPARATION.md  Primo_Prompt_Avvio_Chat_Claude_Desktop_Live_Slide_Center.md  README.md  SPRINT_W_CLOSURE_REPORT.md  STATO_E_TODO.md  Setup_PC_Centro_Slide.md  Setup_Strumenti_e_MCP.md  SlideHub_Live_CURSOR_BUILD.md  Smoke_Test_Centro_Slide.md
docs/Commerciale/: Contratto_SLA.md  Listino_Prezzi.md  README.md  Roadmap_Vendita_Esterna.md  SlideHub_Live_Commerciale.docx
docs/Manuali/: Guida_Uso_Interno_DHS.md  Manuale_Centro_Slide_Desktop.md  Manuale_Code_Signing.md  Manuale_Distribuzione.md  Manuale_Email_Resend.md  Manuale_Installazione_Local_Agent.md  Manuale_Installazione_Room_Agent.md  Manuale_Onboarding_Admin.md  README.md  Script_Screencast.md  build-pdf.ps1
docs/_archive/: QA_FIX_REPORT_2026-04-18.md  README.md  SPRINT_W_CLOSURE_REPORT.md  STATO_E_TODO_storia_sprint_0.1-0.29.md
scripts/: Setup-Field-Test-Env.ps1  Setup-Supabase-MCP.ps1  Verifica-Supabase-MCP.ps1  verify-supabase-backup.ps1
supabase/: config.toml  seed.sql
supabase/migrations/: 20250411090000_init_slide_center.sql  20250415120000_pairing_super_admin.sql  20250415120100_quotas_enforcement.sql  20250415130000_handle_new_user_tenant.sql  20250415140000_phase1_2_hardening.sql  20250416090000_phase3_upload_portal.sql  20250416120000_network_mode.sql  20250416120100_tenant_suspended.sql  20250416140300_phase14_pair_claim_rate_limit.sql  20250416140301_phase14_rls_tenant_suspended.sql  20250417090000_phase4_versioning.sql  20260417100000_team_invitations.sql  20260417110000_admin_uploads_and_move_presentation.sql  20260417120000_tenant_license_sync.sql  20260417130000_onboarding_and_demo_seed.sql  20260417140000_sprint7_operations.sql  20260417150000_sprint8_tenant_audit.sql  20260417160000_security_hardening.sql  20260417170000_perf_consolidate_policies.sql  20260417180000_perf_fk_indexes.sql  20260417190000_room_workflow.sql  20260418000000_room_state_playback_mode.sql  20260418010000_room_realtime_broadcast.sql  20260418020000_move_presentation_to_session.sql  20260418030000_room_state_now_playing.sql  20260418040000_perf_hot_path_indexes.sql  20260418050000_security_least_privilege.sql  20260418060000_admin_create_tenant.sql  20260418070000_lemon_squeezy_integration.sql  20260418080000_room_device_upload_enum.sql  20260418080100_room_device_upload_rpcs.sql  20260418090000_paired_devices_role.sql  20260418100000_device_metric_pings.sql  20260418200000_validation_warnings.sql  20260418210000_remote_control_pairings.sql  20260418220000_audit_fixes_post_deploy.sql  20260418230000_audit_medium_fixes.sql  (+21 more)
(+246 files in other folders)
