[package]
name = "local-agent"
version = "0.1.0"
edition = "2021"
description = "Live SLIDE CENTER — Local Agent (mini-PC regia)"

[lib]
name = "local_agent_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "local-agent"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# HTTP server LAN
axum = { version = "0.7", features = ["json", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio = { version = "1", features = ["full"] }

# HTTP client (download da Supabase Storage)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database locale
rusqlite = { version = "0.31", features = ["bundled"] }

# Serializzazione
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilità
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
dirs = "5"

# Discovery LAN (Sprint 2 — intranet offline)
mdns-sd = "0.19"
local-ip-address = "0.6"
gethostname = "0.4"

# Licenze (Sprint 4 — feature opzionale "license")
aes-gcm = { version = "0.10", optional = true }
wmi = { version = "0.13", optional = true }

[features]
default = []
# Build di vendita: `cargo tauri build --features license`
license = ["dep:aes-gcm", "dep:wmi"]

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
