[package]
name = "room-agent"
version = "0.1.0"
edition = "2021"
description = "Live SLIDE CENTER — Room Agent (PC sala)"

[lib]
name = "room_agent_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "room-agent"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

# HTTP client per chiamate al Local Agent
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"

# Serializzazione
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilità
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
gethostname = "0.4"

# Sprint 2 — discovery LAN
mdns-sd = "0.19"
local-ip-address = "0.6"

# Sprint 4 — licenze (feature opzionale "license")
sha2 = { version = "0.10", optional = true }
aes-gcm = { version = "0.10", optional = true }
wmi = { version = "0.13", optional = true }

[features]
default = []
# Build di vendita: `cargo tauri build --features license`
license = ["dep:sha2", "dep:aes-gcm", "dep:wmi"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt", "errhandlingapi"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
